Fix slider image not showing properly

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -344,7 +344,7 @@ nav {
 
 // Slider
 .slider-image {
-    background-image: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), url("/assets/images/home-3wAI.jpg");
+    background-image: linear-gradient(0.25turn, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), url("../assets/images/home-3wAI.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
